Added Users and Output tables and functionality

--- a/movies-ui/src/app/info/info.component.html
+++ b/movies-ui/src/app/info/info.component.html
@@ -67,6 +67,7 @@
                                 formControlName="frequency">
                                 <nz-option nzValue="Every day" nzLabel="Every day"></nz-option>
                                 <nz-option nzValue="Several times a week" nzLabel="Several times a week"></nz-option>
+                                <nz-option nzValue="Several times a month" nzLabel="Several times a month"></nz-option>
                                 <nz-option nzValue="Once a month" nzLabel="Once a month"></nz-option>
                                 <nz-option nzValue="A few times a year" nzLabel="A few times a year"></nz-option>
                                 <nz-option nzValue="Once a year" nzLabel="Once a year"></nz-option>
