--- a/movies-ui/src/app/thanks/thanks.component.html
+++ b/movies-ui/src/app/thanks/thanks.component.html
@@ -1,4 +1,4 @@
-<div nz-row nzJustify="center">
+<div nz-row nzJustify="center" *ngIf="code">
     <div nz-col nzSpan="20">
         <nz-result
             nzStatus="success"
@@ -6,11 +6,11 @@
             nzSubTitle=""
             >
             <div nz-result-extra>
-                <h2>Here is your completion code: '6FE9DF21' <i nz-icon nzType="copy" nzTheme="outline" (click)="copyText()"></i></h2>
+                <h2>Here is your completion code: '{{code}}' <i nz-icon nzType="copy" nzTheme="outline" (click)="copyText()"></i></h2>
                 <br>
                 <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence"
                     target="blank">
-                    <button nz-button nzType="primary">Here is the link for your movie<i nz-icon nzType="play-square" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary" (click)="movie()">Here is the link for your movie<i nz-icon nzType="play-square" nzTheme="outline"></i></button>
                 </a>
             </div>
         </nz-result>
