--- a/movies-ui/src/app/feedback/feedback.component.html
+++ b/movies-ui/src/app/feedback/feedback.component.html
@@ -7,37 +7,37 @@
                         <nz-form-item>
                             <nz-form-label nzFor="race" nzRequired>HOW WOULD YOU RATE THE SELECTION OF MOVIES AVAILABLE TO YOU?</nz-form-label>
                             <nz-form-control [nzSpan]="12" nzErrorTip="Please select your choice!">
-                            <nz-rate formControlName="race" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
+                            <nz-rate formControlName="rate" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item>
                             <nz-form-label nzFor="race" nzRequired>HOW SATISFIED WERE YOU WITH THE MOVIES YOU CHOSE?</nz-form-label>
                             <nz-form-control [nzSpan]="12" nzErrorTip="Please select your choice!">
-                            <nz-rate formControlName="race" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
+                            <nz-rate formControlName="satisfied" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item>
                             <nz-form-label nzFor="race" nzRequired>HOW MUCH DID YOU RELY ON THE RECOMMENDATION TO MAKE YOUR CHOICES?</nz-form-label>
                             <nz-form-control [nzSpan]="12" nzErrorTip="Please select your choice!">
-                            <nz-rate formControlName="race" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
+                            <nz-rate formControlName="rely" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item>
                             <nz-form-label nzFor="race" nzRequired>HOW LIKELY ARE YOU TO USE YOUR EARNINGS TO RENT THE MOVIE?</nz-form-label>
                             <nz-form-control [nzSpan]="12" nzErrorTip="Please select your choice!">
-                            <nz-rate formControlName="race" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
+                            <nz-rate formControlName="likely" [nzCount]="7" [nzTooltips]="tooltips"></nz-rate>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item>
                             <nz-form-label nzFor="age" nzRequired>WHAT DO YOU THINK THIS STUDY IS ABOUT?</nz-form-label>
                             <nz-form-control [nzSpan]="18" nzErrorTip="Please enter your text">
-                                <textarea rows="4" nz-input formControlName="race" ></textarea>
+                                <textarea rows="4" nz-input formControlName="study" ></textarea>
                             </nz-form-control>
                         </nz-form-item>
                         <nz-form-item>
                             <nz-form-label nzFor="age" nzRequired>ANYTHING ELSE YOU’D LIKE TO SHARE WITH US?</nz-form-label>
                             <nz-form-control [nzSpan]="18" nzErrorTip="Please enter your text">
-                                <textarea rows="4" nz-input formControlName="race" ></textarea>
+                                <textarea rows="4" nz-input formControlName="share" ></textarea>
                             </nz-form-control>
                         </nz-form-item>
 
