--- a/movies-ui/src/app/home/home.component.html
+++ b/movies-ui/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="note" *ngIf="consent_page && dynamic_content">
+<div class="note" *ngIf="consent_page && dynamic_content && user_id">
     <div nz-row nzJustify="center">
         <div nz-col nzSpan="22">
             <nz-card nzTitle="Consent for Participation in Research study">
