--- a/movies-ui/src/app/survey/survey.component.html
+++ b/movies-ui/src/app/survey/survey.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loading">
+<div *ngIf="!names">
     <div nz-row nzJustify="center" nzAlign="middle">
         <div nz-col nzSpan="2" style="padding-top: 15%">
             <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
@@ -6,14 +6,14 @@
     </div>
 </div>
 
-<div *ngIf="!loading">
+<div *ngIf="names">
     <nz-layout class="layout">
         <div class="sider">
             <nz-sider>
                 <div nz-row nzJustify="center" class="countdown" *ngIf="time_choice">
                     <nz-countdown 
                     [nzValue]="deadline" 
-                    [nzTitle]="'Timer'"
+                    [nzTitle]="'Timer 1'"
                     [nzValueStyle]="{'color': 'white','font-size':'40px'}"
                     [nzFormat]="'mm:ss:SSS'"
                     (nzCountdownFinish)="timeup()"
@@ -22,7 +22,7 @@
                 <div nz-row nzJustify="center" class="countdown" *ngIf="!time_choice">
                     <nz-countdown 
                     [nzValue]="deadline" 
-                    [nzTitle]="'Timer'"
+                    [nzTitle]="'Timer 2'"
                     [nzValueStyle]="{'color': 'white','font-size':'40px'}"
                     [nzFormat]="'mm:ss'"
                     (nzCountdownFinish)="timeup()"
@@ -66,10 +66,20 @@
                     <ng-container *nzModalContent>
                         {{movies[review_index]['review']}}
                     </ng-container>
+                    <div *nzModalFooter>
+                        <button nz-button nzType="primary" (click)="handleOk()" >OK</button>
+                    </div>
                 </nz-modal>
             </div>
             <div nz-row nzJustify="center" style="padding-top:30px;">
-                <button nz-button nzType="primary" style="background-color:green;" (click)="loadMore()">Load More<i nz-icon nzType="plus-circle" nzTheme="outline"></i></button>
+                <button nz-button 
+                        nzType="primary" 
+                        style="background-color:green;" 
+                        [nzLoading]="isLoading"
+                        (click)="loadMore()">
+                        {{load_button_text}}
+                        <i nz-icon nzType="plus-circle" nzTheme="outline"></i>
+                </button>
             </div>
             <br/><br/>
         </nz-content>
