--- a/movies-ui/src/app/exit/exit.component.html
+++ b/movies-ui/src/app/exit/exit.component.html
@@ -1,6 +1,7 @@
 <div nz-row nzJustify="center">
     <div nz-col nzSpan="20">
-        <nz-result nzStatus="warning" nzTitle="YOU HAVE SELECTED A WRONG OPTION THAT DOES NOT ALLOW YOU TO CONTINUE.
+        <nz-result nzStatus="warning" nzTitle="EITHER YOU HAVE COMPLETED THE SURVEY BEFORE (OR)   
+HAVE SELECTED A WRONG OPTION THAT DOES NOT ALLOW YOU TO CONTINUE.
 ">
         </nz-result>
     </div>
