Added Movie link

--- a/movies-ui/src/app/info/info.component.html
+++ b/movies-ui/src/app/info/info.component.html
@@ -47,7 +47,7 @@
                             <nz-select
                                 id="study"
                                 formControlName="study"
-                                nzPlaceHolder="study">
+                                nzPlaceHolder="Education level">
                                 <nz-option nzValue="Did not graduate high school" nzLabel="Did not graduate high school"></nz-option>
                                 <nz-option nzValue="Graduated high school" nzLabel="Graduated high school"></nz-option>
                                 <nz-option nzValue="Some college, no degree" nzLabel="Some college, no degree"></nz-option>
