--- a/movies-ui/src/app/thanks/thanks.component.html
+++ b/movies-ui/src/app/thanks/thanks.component.html
@@ -8,10 +8,12 @@
             <div nz-result-extra>
                 <h2>Here is your completion code: '{{code}}' <i nz-icon nzType="copy" nzTheme="outline" (click)="copyText()"></i></h2>
                 <br>
-                <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence"
-                    target="blank">
-                    <button nz-button nzType="primary" (click)="movie()">Here is the link for your movie<i nz-icon nzType="play-square" nzTheme="outline"></i></button>
-                </a>
+                <div *ngIf="movie_flag">
+                    <a href={{final_movie}}
+                        target="blank">
+                        <button nz-button nzType="primary" (click)="movie()">Here is the link for your movie<i nz-icon nzType="play-square" nzTheme="outline"></i></button>
+                    </a>
+                </div>
             </div>
         </nz-result>
     </div>
