--- a/movies-ui/src/app/app.component.css
+++ b/movies-ui/src/app/app.component.css
@@ -9,12 +9,9 @@
     z-index: 1;
   }
 
-  .logo h2{
-      color: beige;
-      text-align: center;
-  }
-  .logo{
-    margin: auto;
+  img{
+    padding-top: 5px;
+    height: 50px;
   }
 
   [nz-menu] {
