--- a/movies-ui/src/app/app.component.html
+++ b/movies-ui/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nz-layout class="layout">
   <nz-header>
-    <div class="logo">
-      <h2>Chicago Booth School | Center for Applied Artificial Intelligence</h2>
+    <div nz-row nzJustify="center" nzAlign="middle">
+        <img src="../assets/uch.jpg">
     </div>
   </nz-header>
   <nz-content>
